objects/Marketing_Request__c.object
<CustomObject>
    <fields>
        <fullName>Date_Sent_to_Content_Coordinator__c</fullName>
        <label>Date Sent to Content Coordinator</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_Digital_Coordinator__c</fullName>
        <label>Date Sent to Digital Coordinator</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_Email_Approver__c</fullName>
        <label>Date Sent to Email Approver</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_Graphic_Designer__c</fullName>
        <label>Date Sent to Graphic Designer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_Installer__c</fullName>
        <label>Date Sent to Installer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Social_Media_Graphics_Sent_to_Locat__c</fullName>
        <label>Date Social Media Graphics Sent to Locat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Social_Media_Post_Made__c</fullName>
        <label>Date Social Media Post Made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Social_Media_Post_Sent_for_Approval__c</fullName>
        <label>Date Social Media Post Sent for Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Social_media_Post_Approved__c</fullName>
        <label>Date Social media Post Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submit_Opt_Out_to_Accounting__c</fullName>
        <label>Date Submit Opt Out to Accounting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Art_Approval__c</fullName>
        <label>Date of Art Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Compliance_1_Approval__c</fullName>
        <label>Date of Compliance 1 Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Compliance_Rejection__c</fullName>
        <label>Date of Compliance Rejection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Digital_Approval__c</fullName>
        <label>Date of Digital Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Event__c</fullName>
        <label>Date of Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Event_fx__c</fullName>
        <formula>Date_of_Event__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Install__c</fullName>
        <label>Date of Install</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Edit__c</fullName>
        <label>Date of Last Edit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Location_Approval__c</fullName>
        <label>Date of Location Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_MC_Acknowledgement__c</fullName>
        <label>Date of MC Acknowledgement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_RM_BDM_Completion__c</fullName>
        <label>Date of RM/BDM Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_Send_Email__c</fullName>
        <label>Date to Send Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_Send_Text_Message__c</fullName>
        <label>Date to Send Text Message</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <formula>Artwork_Due_Date__c   - today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Notes__c</fullName>
        <formula>today() -  Last_Item_Notes_Edit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Notes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Sent_to_Accounting__c</fullName>
        <formula>today()- Date_Sent_to_Accounting__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Sent to Accounting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Until_Event__c</fullName>
        <formula>Date_of_Event__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deactivate_Location_Manager_User_in_ALE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate Location Manager User in ALE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>December__c</fullName>
        <defaultValue>&quot;Opt Out&quot;</defaultValue>
        <label>December</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Month_and_Tier_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deduction_Days_Elapsed__c</fullName>
        <formula>TODAY()-Date_Check_Issued__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deduction Days Elapsed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deduction_End_Date__c</fullName>
        <label>Deduction End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deduction_Start_Date__c</fullName>
        <label>Deduction Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_TAT__c</fullName>
        <formula>Date_Returned_From_Graphic_Designer__c -Date_Sent_to_Graphic_Designer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Design TAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Digital_Path_Stages__c</fullName>
        <label>Digital Path Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Info</fullName>
                    <default>true</default>
                    <label>Info</label>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Approvals</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_Mail_Postage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Mail/Postage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disenroll_Tablet_Hexnode_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disenroll Tablet Hexnode ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distance_from_Electrical_Outlet__c</fullName>
        <inlineHelpText>How far is the install location from two electrical outlets that will be used (measure from the center of the intended monitor space)?</inlineHelpText>
        <label>Distance from Electrical Outlet</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Does_Location_Have_TouchTunes__c</fullName>
        <label>Does Location Have TouchTunes Jukebox?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes_loc_has_accel_tt</fullName>
                    <label>Yes, Location has Accel TouchTunes</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No, Location would like to add TouchTunes</fullName>
                    <isActive>false</isActive>
                    <label>No, Location would like to add TouchTunes</label>
                </value>
                <value>
                    <fullName>No, and Location does not wish to add touch tunes</fullName>
                    <isActive>false</isActive>
                    <label>No, and Location does not wish to add touch tunes</label>
                </value>
                <value>
                    <fullName>Yes, Location has Competitor TouchTunes</fullName>
                    <isActive>false</isActive>
                    <label>Yes, Location has Competitor TouchTunes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Location_Have_Wi_Fi__c</fullName>
        <label>Does Location Have Wi-Fi?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes (provide Network Name/Password below)</fullName>
                </value>
                <value>
                    <fullName>No (If no, Location cannot get UpShow)</fullName>
                    <label>No (If no, Location cannot get TouchTunes TV)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Double_Sided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Double Sided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drawing_Date_and_Time__c</fullName>
        <label>Drawing Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EXTERNAL_ID__c</fullName>
        <label>EXTERNAL ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Text_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Fill out the approver name, then click Submit for Approval</inlineHelpText>
        <label>Email/Text Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Text_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email/Text Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_UpShow_to_Disenroll_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email UpShow to Disenroll Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emailed_Compliance_Chattered_WeeklyPay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emailed Compliance &amp; Chattered WeeklyPay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_of_Attendees__c</fullName>
        <label>Estimated # of Attendees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_End_Time__c</fullName>
        <label>Event End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Event_End_Time_fx__c</fullName>
        <description>fx (pulls from event end time on record)</description>
        <formula>Event_End_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Event_Photos_Uploaded__c</fullName>
        <label>Event Photos Uploaded</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Start_Time__c</fullName>
        <label>Event Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Event_Start_Time_fx__c</fullName>
        <description>fx (pulls from event start time on record)</description>
        <formula>Event_Start_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Expected_Run_End_Date__c</fullName>
        <label>Expected Run End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Run_Start_Date__c</fullName>
        <label>Expected Run Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Total_Prize_Value__c</fullName>
        <label>Expected Total Prize Value</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Export_Location_Entries_from_ALE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export Location Entries from ALE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Export_Player_Data_from_ALE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export Player Data from ALE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSG_User_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Invisible field - Process Builder will write to this to enable notifications on FSG requests to Trish and Gigi.</description>
        <label>FSG User Lookup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>February__c</fullName>
        <defaultValue>&quot;Opt Out&quot;</defaultValue>
        <label>February</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Month_and_Tier_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Notes_From_Jr_Ambassador__c</fullName>
        <label>Feedback Notes From Jr Ambassador</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Filled_In_Tinley__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filled In Tinley</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_Approval_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Approval Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flow_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flow Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Free_Play_Expiration_Date__c</fullName>
        <label>Free Play Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Free_Play_Offer_Amount__c</fullName>
        <label>Free Play Offer Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Graphic_Design_Overdue__c</fullName>
        <formula>and( isblank(Date_Returned_From_Graphic_Designer__c ),Artwork_Due_Date__c &lt;  TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Graphic Design Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Graphic_Designer_Notes__c</fullName>
        <label>Graphic Designer Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graphic_Designer__c</fullName>
        <label>Graphic Designer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Artwork Not Needed</fullName>
                </value>
                <value>
                    <fullName>Elizabeth Nelson</fullName>
                </value>
                <value>
                    <fullName>Jake Garcia</fullName>
                </value>
                <value>
                    <fullName>John Calaunan</fullName>
                </value>
                <value>
                    <fullName>Lea Guckenberger</fullName>
                    <label>Lea Guerrero</label>
                </value>
                <value>
                    <fullName>Lindsey Scott</fullName>
                </value>
                <value>
                    <fullName>Lisa Mallo</fullName>
                </value>
                <value>
                    <fullName>Marisa Kinn</fullName>
                </value>
                <value>
                    <fullName>Matt Lusa</fullName>
                </value>
                <value>
                    <fullName>Scott LeBeau</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HQ_Account__c</fullName>
        <formula>Account__r.HQ_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HQ Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hashtag__c</fullName>
        <label>Hashtag</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IGB_License_Number__c</fullName>
        <label>IGB License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGB_License_Status__c</fullName>
        <label>IGB License Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Licensed</fullName>
                </value>
                <value>
                    <fullName>Not Licensed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITEM_REF_CRM__c</fullName>
        <label>ITEM REF CRM</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Yes_List_Name_As_It_Will_Appear__c</fullName>
        <label>If Yes, List Name As It Will Appear</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_Co_Op_Budget__c</fullName>
        <label>Include in Co-Op Budget?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Information_Stage_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Information Stage Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Information_Stage_Notes__c</fullName>
        <label>Information Stage Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Sender_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Register New User in ALE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_User_Setup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Location in ALE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Install Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Required_Yes_No__c</fullName>
        <label>Install Required? Yes/No</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installation_Notes__c</fullName>
        <label>Installation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Installer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installer Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_Requests7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Submission_Notes__c</fullName>
        <label>Invoice Submission Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Location_Participating_in_Sweepstakes__c</fullName>
        <label>Is Location Participating in Sweepstakes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_This_Location_Part_of_Other_Locations__c</fullName>
        <label>Is This Location Part of Other Locations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_Classification__c</fullName>
        <label>Item Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Folders</fullName>
                </value>
                <value>
                    <fullName>Darts Posters</fullName>
                </value>
                <value>
                    <fullName>Sales Presentation</fullName>
                </value>
                <value>
                    <fullName>Water_Bottles</fullName>
                    <label>Water Bottles</label>
                </value>
                <value>
                    <fullName>Meeting Handout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_Historical__c</fullName>
        <label>Item (Historical)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Notes__c</fullName>
        <inlineHelpText>Please describe any custom details here.</inlineHelpText>
        <label>Item Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item_Subtype__c</fullName>
        <label>Item Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Sweepstakes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Name</label>
        <referenceTo>Dayna_Test_Mktg_Items__c</referenceTo>
        <relationshipName>Dayna_Marketing_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_s_For_Event__c</fullName>
        <label>Item(s) For Event</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Large Plinko Board</fullName>
                </value>
                <value>
                    <fullName>Small Plinko Board</fullName>
                </value>
                <value>
                    <fullName>Spin Wheel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>July__c</fullName>
        <defaultValue>&quot;Opt Out&quot;</defaultValue>
        <label>July</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Month_and_Tier_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>June__c</fullName>
        <defaultValue>&quot;Opt Out&quot;</defaultValue>
        <label>June</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Month_and_Tier_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Item_Notes_Edit__c</fullName>
        <label>Last Item Notes Edit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Name2__c</fullName>
        <formula>Account__r.Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_Ad_in_seconds__c</fullName>
        <label>Length of Ad (in seconds)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Letter_Agreement_Sent_to_RM__c</fullName>
        <label>Letter Agreement Sent to RM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Letter_Agreement_on_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Letter Agreement on File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Licensed_Denied_Date__c</fullName>
        <label>Licensed Denied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <formula>Account__r.ShippingStreet &amp; BR() &amp; Account__r.ShippingCity &amp; &quot;, &quot; &amp; Account__r.ShippingState &amp; &quot; &quot; &amp; Account__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Approval_TAT__c</fullName>
        <formula>Date_of_Location_Approval__c-Date_Sent_For_Location_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Approval TAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Co_Op_Spend_YTD_2019__c</fullName>
        <label>Location Co-Op Spend YTD 2019</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location_Content_Split__c</fullName>
        <description>Does Location Want 100% or 50/50 Content Split</description>
        <inlineHelpText>Does Location Want 100% or 50/50 Content Split?</inlineHelpText>
        <label>Location Content Split</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100% Accel Content</fullName>
                </value>
                <value>
                    <fullName>50/50 Content Split</fullName>
                </value>
                <value>
                    <fullName>50/50 Content Split – Non IL Locations ONLY</fullName>
                    <isActive>false</isActive>
                    <label>50/50 Content Split – Non IL Locations ONLY</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Cost_Share_Amount_Rollup__c</fullName>
        <label>Location Cost Share Amount Rollup</label>
        <summarizedField>Marketing_Request_Products__c.Location_Spend__c</summarizedField>
        <summaryForeignKey>Marketing_Request_Products__c.Marketing_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location_Cost_Share_Amount__c</fullName>
        <label>Location Cost Share Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location_Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location Donation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Install_Contact_Phone__c</fullName>
        <label>Location Install Contact Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_Install_Contact__c</fullName>
        <label>Location Install Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Live_Status__c</fullName>
        <formula>IF(AND(ISPICKVAL(Account__r.Type,&quot;Accel Account&quot;),NOT(ISBLANK( Account__r.Accel_VGT_Live_Date__c))),&quot;Live Location&quot;,&quot;Not Live&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Live Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name_on_Item__c</fullName>
        <label>Location Name on Item?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Spend_YTD2018__c</fullName>
        <label>Location Spend YTD 2018</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location_Summary__c</fullName>
        <label>Location Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_Sweepstakes_Participation__c</fullName>
        <label>Location Sweepstakes Participation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, this is Tier 1 Location</fullName>
                </value>
                <value>
                    <fullName>Yes, this is Tier 2 Location</fullName>
                </value>
                <value>
                    <fullName>No, but location wishes to sign up for sweepstakes</fullName>
                </value>
                <value>
                    <fullName>No, location does not wish to sign up for sweepstakes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MRP_Rollup_Count__c</fullName>
        <label>MRP Rollup Count</label>
        <summaryForeignKey>Marketing_Request_Products__c.Marketing_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Manager_Approvals__c</fullName>
        <formula>Name_of_Person_Requesting__r.Manager.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager (Approvals)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>March__c</fullName>
        <defaultValue>&quot;Opt Out&quot;</defaultValue>
        <label>March</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Month_and_Tier_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Acknowledgement_TAT__c</fullName>
        <formula>Date_of_MC_Acknowledgement__c-Request_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Acknowledgement TAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Approval__c</fullName>
        <label>Marketing Approval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>